# gem-search

./: .coverage  .gitignore  CLAUDE.md  README.md  coverage.xml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  tasks.md  test_api.py  test_backend.py  test_crawler.py  test_migrations.py  test_vector_search.py
.github/workflows/: ci.yml
backend/: init_db.py  requirements.txt  yoyo.ini
backend/app/: __init__.py  database.py  embedding_service.py  main.py  models.py  reddit_scraper.py  scraper.py
backend/migrations/: 001_initial_schema.sql  002_add_embeddings.sql  002_add_embeddings_rollback.sql  003_create_vector_table.py
backend/tests/: __init__.py  test_embedding_endpoint.py  test_embedding_service.py  test_reddit_scraper.py  test_scraper.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: about.md  index.html
frontend/src/: App.tsx  index.tsx
frontend/src/api/: SearchAPI.ts
frontend/src/components/: About.tsx  Logo.tsx  NavBar.tsx  ResultItem.tsx  RetroEasterEggs.tsx  SearchBar.tsx  SearchBox.tsx  SearchResults.tsx
frontend/src/containers/: SearchContainer.tsx
frontend/src/context/: RetroFlags.tsx
frontend/src/pages/: About.tsx
frontend/src/styles/: retro.css
public/: manifest.json
scripts/: pre-push.sh  run_tests.py
search/: Dockerfile  README.md  README_FTS.md  __init__.py  alembic.ini  bm25_tokenized_documents.pkl  crawler_example.py  generate_embeddings.py  import_csv.py  import_links.py  init_db.py  init_sqlite_db.py  main.py  main_sqlite.py  pyproject.toml  requirements.txt  test_api.py  test_scraper.py  tokenize_docs.py  tokenize_sqlite.py
search/app/: __init__.py  database.py  main.py  models.py  reddit_scraper.py  scraper.py  vector_search.py
search/crawler/: __init__.py  classifier.py  crawler.py  db.py  discovery.py  extractor.py  utils.py
search/data/: links.json
search/db/: database.py  models.py
search/migrations/: 001_initial_schema_rollback.sql  env.py
search/migrations/versions/: c36570b1cdd3_initial_schema.py  simple_schema.py
search/scrapers/: alembic_scraper.py  demo.py  demo_alembic.py  links.json  output.csv  scraper.py  simple_scraper.py  util.py  util_old.py  util_sqlite.py
search/tests/: __init__.py  conftest.py  test_api.py  test_app.py  test_scraper.py
search/tests/crawler/: __init__.py  test_classifier.py  test_crawler.py  test_db.py  test_discovery.py  test_extractor.py  test_utils.py
src/: App.css  App.tsx
src/api/: SearchAPI.ts
src/components/: SearchBar.css  SearchBar.tsx  SearchResults.tsx
src/containers/: SearchContainer.tsx
tests/: __init__.py  test_api.py  test_backend.py
