[project]
name = "search"
version = "0.1.0"
description = ""
authors = [
    {name = "rishigundakaram",email = "rishi.gundakaram@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "newspaper4k (>=0.9.3.1,<0.10.0.0)",
    "lxml-html-clean (>=0.4.1,<0.5.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
]

[tool.poetry.dependencies]
python = ">=3.11.8,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
