[tool.poetry]
name = "gem-search"
version = "0.1.0"
description = "A web application for mining the hidden gems of the internet"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.5.0"
newspaper3k = "^0.2.8"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
trafilatura = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"